[package]
name = "nomake"
version = "0.1.0"
authors = ["Rodrigo Valin <licorna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.48"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
base64 = "0.11.0"
anyhow = "1.0"
dirs = "2.0.2"
structopt = "0.3.9"
bollard = "0.5.0"
tokio = "0.2.13"
